# heimdall

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  heimdall.example.toml  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCH.md  classifiers.md  configuration.md  protocol.md  pty-primer.md
src/: attach.rs  broadcast.rs  cli.rs  commands.rs  config.rs  main.rs  pidfile.rs  protocol.rs  pty.rs  socket.rs  supervisor.rs  terminal.rs  util.rs
src/classify/: claude.rs  mod.rs  none.rs  simple.rs
tests/: integration.rs  test_attach.py
